--- a/heritage.html
+++ b/heritage.html
@@ -238,18 +238,18 @@
                 <div class="heritage-testi-grid">
                     <div class="heritage-testi-card">
                         <p class="heritage-testi-text">"I haven't tasted a Nihari this authentic since my grandmother's
-                            kitchen in Old Delhi. It brought tears to my eyes."</p>
-                        <div class="heritage-testi-author">— Aarav M., Cultural Historian</div>
+                            kitchen in Old Delhi."</p>
+                        <div class="heritage-testi-author" style="margin-top: 100px;">— Aarav M.,<br> Cultural Historian</div>
                     </div>
                     <div class="heritage-testi-card">
                         <p class="heritage-testi-text">"No foam, no nitrogen, no gimmicks. Just honest, powerful,
                             incredible Indian food. A masterpiece."</p>
-                        <div class="heritage-testi-author">— Sarah Jenkins, Food Critic</div>
+                        <div class="heritage-testi-author" style="margin-top:100px;">— Sarah Jenkins,<br> Food Critic</div>
                     </div>
                     <div class="heritage-testi-card">
                         <p class="heritage-testi-text">"The ambiance feels like a royal haveli. Eating here grounds you.
                             It's strictly for those who respect the craft."</p>
-                        <div class="heritage-testi-author">— Vikram Sethi</div>
+                        <div class="heritage-testi-author" style="margin-top:100px;">— Vikram Sethi,<br> Chef</div>
                     </div>
                 </div>
             </div>
