--- a/menu.html
+++ b/menu.html
@@ -186,6 +186,54 @@
         </div>
     </main>
 
+     <footer class="site-footer">
+        <div class="footer-content">
+            <div class="footer-column footer-brand">
+                <div class="logo">
+                    <a href="index.html" class="logo-link">
+                        <img src="./assets/logo.png" alt="Woods & Spices Logo" style="height: 50px;">
+                        <span class="brand-name">WOODS & SPICES</span>
+                    </a>
+                </div>
+                <p>Every dish we serve is crafted with care, flavor, and heart. Experience the true essence of fine
+                    dining.</p>
+            </div>
+            <div class="footer-column footer-links">
+                
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="index.html"><i class="fa-solid fa-chevron-right"></i> Home</a></li>
+                    <li><a href="about.html"><i class="fa-solid fa-chevron-right"></i> About</a></li>
+                    <li><a href="menu.html"><i class="fa-solid fa-chevron-right"></i> Menu</a></li>
+                    <li><a href="services.html"><i class="fa-solid fa-chevron-right"></i> Services</a></li>
+                    <li><a href="blog.html"><i class="fa-solid fa-chevron-right"></i> Blog</a></li>
+                    <li><a href="contact.html"><i class="fa-solid fa-chevron-right"></i> Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-column footer-links">
+                <h3>Contact Us</h3>
+                <p style="margin: 10px 0px;"><i class="fa-solid fa-location-dot" ></i> Mount Road, Mylapore, Chennai</p>
+                <p style="margin: 10px 0px;"><i class="fa-solid fa-phone"></i> +91 98765 43210</p>
+                <p><i class="fa-solid fa-envelope"></i> hello@woodandspice.com</p>
+                <div class="social-links">
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                </div>
+            </div>
+            <div class="footer-column footer-links">
+                <h3>Newsletter</h3>
+                <p>Subscribe to get the latest updates and offers.</p>
+                <form class="newsletter-form">
+                    <input type="email" placeholder="Your Email">
+                    <button type="submit">GO</button>
+                </form>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2026 Woods & Spices. All Rights Reserved.</p>
+              </div>
+    </footer>
  
     <!-- Authentication Modal -->
     <div id="authModal" class="auth-modal">
